--- a/diss.tex
+++ b/diss.tex
@@ -3,7 +3,7 @@
 %   Some archives requires the PDF-A1 format. 
 %   This requires the setting, and (possibly) compiling with -shell-escape.
 % --------------------------
-\directlua{pdf.setminorversion(3)}
+
 % --------------------------
 \documentclass[oneside]{0_dissconfig/dissertation}
 
@@ -15,8 +15,12 @@
 %   ! NOTE: CONVERT ALL .png in tikz-pictures INTO .pdfs for this to work.
 % 
 % --------------------------
-\directlua{pdf.setmajorversion(1)}  % only works with lualatex 
-\directlua{pdf.setinfo("Author", "Kevin Marcel Tiepelt")}  % only works with lualatex 
+\usepackage{iftex}
+\ifluatex
+  \directlua{pdf.setminorversion(3)} % possibly, this has to go BEFORE 'documentclass'
+  \directlua{pdf.setmajorversion(1)}  % only works with lualatex 
+  \directlua{pdf.setinfo("Author", "Kevin Marcel Tiepelt")}  % only works with lualatex 
+\fi
 \usepackage[a-1b]{pdfx}
 
 \pdfinfo { % When using lualatex, I need to set the pdfinfo as follows.  
