--- a/PartI/HowToTemplate.tex
+++ b/PartI/HowToTemplate.tex
@@ -49,7 +49,7 @@ There is also a command to present your contributions:
 	\includegraphics[width=\linewidth]{example-image-a}
 	%
 	\caption{Linewidth Figure}
-	\label{LABEL}
+	\label{LABEL1}
 \end{figure}
 
 
@@ -58,7 +58,7 @@ There is also a command to present your contributions:
 	\includegraphics[width=\linewidth+\marginparsep]{example-image-a}
 	%
 	\caption{Fullwidth Figure}
-	\label{LABEL}
+	\label{LABEL2}
 	\end{fullwidth}
 \end{figure}
 
@@ -68,20 +68,20 @@ There is also a command to present your contributions:
 		%
 		\includegraphics[width=\linewidth]{example-image-a}
 		%
-		\label{LABEL}
+		\label{LABEL3}
 	\end{sidecaption}
 \end{figure}
 
 \begin{figure}
 	%
-	\subbottom[{Subfigure in Memoir class}\label{LABEL}]{
+	\subbottom[{Subfigure in Memoir class}\label{LABEL4}]{
           \includegraphics[width=.7\linewidth]{example-image-a}
     }\\%
-    \subbottom[{Subfigure in Memoir class}\label{LABEL}]{
+    \subbottom[{Subfigure in Memoir class}\label{LABEL5}]{
           \includegraphics[width=.7\linewidth]{example-image-b}
     }%
     \caption{Caption of subfigure in Memoir.}
-    \label{LABEL}
+    \label{LABEL6}
 \end{figure}
 
 
