--- a/PartI/Structure.tex
+++ b/PartI/Structure.tex
@@ -15,16 +15,12 @@ The template was designed using
 \paragraph{Configuration}
 
 \begin{description}
-	\item[Template] The main config are stored under 
+	\item[Template] The main configs are stored under 
 	\begin{itemize}
-	 	\item \lstinline{/0_dissconfig}
+	 	\item \lstinline{/0_config}
 	 \end{itemize} 
-	 You should adapt \lstinline{/0_dissconfig/config.tex}. There is space to add all your ``custom'' packages there.
+	 You should adapt \lstinline{/0_config/config.tex}. There is space to add all your ``custom'' packages there.
 	 %
-	 \item[Other] The custom configs are stored under 
-	 \begin{itemize}
-	 	\item \lstinline{/0_customconfig}
-	 \end{itemize} 
 	 Currently, that holds acronyms and custom macros. I did not put the packages here, because I think keeping them as close to each other as possible makes it easier to avoid conflicts.
 \end{description}
 
