--- a/diss.tex
+++ b/diss.tex
@@ -34,8 +34,8 @@
 % ---------------------
 % Load dissertation styles and commands
 % ---------------------
-\input{0_dissconfig/config}
-\input{0_customconfig/macros}
+\input{0_config/config}
+\input{0_config/macros}
 
 
 %********************************************************************
@@ -54,7 +54,7 @@
 % Acronyms
 %*******************************************************
 \makeglossaries
-\input{0_customconfig/Acronyms}
+\input{0_config/Acronyms}
 
 \begin{document}
 
@@ -82,8 +82,6 @@
 \cleardoublepage{}
 % % -------------------------
 \input{PartI/PartI}
-
-%\input{FrontBackmatter/conclusion}
 
 
 %********************************************************************
