--- a/FrontBackmatter/Colophon.tex
+++ b/FrontBackmatter/Colophon.tex
@@ -7,10 +7,10 @@
 
 \vfill
 
-
-\pdfbookmark[0]{Colophon}{colophon}
 \section*{Colophon}
-
+%
+\mparshift{40em} % vertical align footnotes with Colophon
+%
 This thesis was typeset using \LaTeX{} and the \texttt{memoir} documentclass. 
 The template\footnote{\url{https://github.com/mtiepelt/dissertation}} is based on Friedrich Wiemer's thesis \footnote{\url{https://github.com/pfasante/phd_thesis/tree/master}}, 
 which itself is based Aaron Turon's thesis \footnote{\url{https://people.mpi-sws.org/~turon/turon-thesis.pdf}}, itself again a mixture of \texttt{classicthesis}\footnote{\url{https://bitbucket.org/amiede/classicthesis/}} by Andr\'e Miede and \texttt{tufte-latex}\footnote{\url{https://github.com/Tufte-LaTeX/tufte-latex}}, based on Edward Tufte's \emph{Beautiful Evidence}.\\[0.5\baselineskip]
@@ -22,5 +22,3 @@ The margin text is set 8/9pt (brevier) on a 12pc measure.
 Matthew Carter's \textrm{Charter} acts as both the text and display typeface.
 Monospaced text uses Jim Lyles's \texttt{Bitstream Vera Mono} (\enquote{Bera Mono}).\\[0.5\baselineskip]
 %
-
-
