--- a/FrontBackmatter/Publications.tex
+++ b/FrontBackmatter/Publications.tex
@@ -22,6 +22,7 @@
     }
 \end{refsection}
 
+\cleardoublepage{}
 \chapter*{Open-Access Versions}
 
 \begin{refsection}[bibliography/own_openaccess] %The optional argument is a comma-separated list of resources specific to the reference section.
