--- a/FrontBackmatter/contents_extended.tex
+++ b/FrontBackmatter/contents_extended.tex
@@ -10,17 +10,17 @@
 \begin{fullwidth}
 \printglossary[type=\acronymtype,style=super]{}
 \end{fullwidth}
-\clearpage
+\cleardoublepage
 
 %\pdfbookmark[0]{\listfigurename}{lof}
 \begin{fullwidth}
 \listoffigures*\addcontentsline{toc}{part}{List of Figures}
 \end{fullwidth}
 \vspace{\baselineskip}
-\clearpage{}
+\cleardoublepage{}
 
 %\pdfbookmark[0]{\listtablename}{lot}
 \begin{fullwidth}
 \listoftables*\addcontentsline{toc}{part}{List of Tables}
 \end{fullwidth}
-\clearpage{}
+\cleardoublepage{}
