--- a/PartI/Structure.tex
+++ b/PartI/Structure.tex
@@ -3,6 +3,7 @@
 
 
 % -----------------------------------------------------
+\cleardoublepage
 \chapter{Structure}
 
 The template was designed using 
